k8s/infra/lldap/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lldap
  name: http-service
  namespace: lldap
spec:
  ports:
    - name: http
      port: 17170
      protocol: TCP
      targetPort: 17170
  selector:
    app: lldap
